#linear library

SET (LINEAR_LIB_SRCS
  ${CMAKE_CURRENT_SOURCE_DIR}/linear.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/linear.h
  ${CMAKE_CURRENT_SOURCE_DIR}/tron.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/tron.h
  )

ADD_LIBRARY(${LINEAR_LIBRARIES} ${LINKING_MODE}
	${LINEAR_LIB_SRCS}
)

target_link_libraries(${LINEAR_LIBRARIES}
	${BLAS_LIBRARIES}
)

INSTALL(TARGETS ${LINEAR_LIBRARIES} RUNTIME DESTINATION bin LIBRARY DESTINATION bin ARCHIVE DESTINATION bin)

